[gd_scene load_steps=25 format=3 uid="uid://cqo7ru5lo8e6g"]

[ext_resource type="Theme" uid="uid://cx302yraw066y" path="res://data/ChooesLevel.tres" id="1_ehgxy"]
[ext_resource type="Script" uid="uid://jru6xfv7g4f1" path="res://scripts/choose_level/02_chooes_level.gd" id="1_o008e"]
[ext_resource type="Texture2D" uid="uid://bwevuvs5nnwfx" path="res://assets/image/ui/ui_challenge/Challenge_Background.jpg" id="2_xopa1"]
[ext_resource type="Texture2D" uid="uid://ders1ogcvovet" path="res://assets/image/ui/ui_challenge/Challenge_Blank.png" id="3_we3l7"]
[ext_resource type="Texture2D" uid="uid://hb4b6ujaahoc" path="res://assets/image/Almanac/Almanac_GroundDay.jpg" id="4_e2jkj"]
[ext_resource type="Texture2D" uid="uid://bnwwtx66naab1" path="res://assets/image/ui/ui_challenge/Challenge_Window.png" id="6_mrsyh"]
[ext_resource type="Texture2D" uid="uid://vwk4r0yu588v" path="res://assets/image/ui/ui_challenge/Challenge_Window_Highlight.png" id="7_fgi2n"]
[ext_resource type="PackedScene" uid="uid://bqvqjd3yshp8r" path="res://scenes/character/zombie/zombie_020_yeti.tscn" id="7_my4l7"]
[ext_resource type="Script" uid="uid://cnagiy3yxjooh" path="res://scripts/choose_level/chooes_level_button.gd" id="8_pw6t1"]
[ext_resource type="Texture2D" uid="uid://bvp2j68muqgm8" path="res://assets/image/Almanac/Almanac_GroundNight.jpg" id="10_rivfv"]
[ext_resource type="Texture2D" uid="uid://om7aubyyu3le" path="res://assets/image/ui/ui_level/SeedChooser_Button2.png" id="13_v8ms4"]
[ext_resource type="Resource" uid="uid://byaabbkntnwec" path="res://resources/level_date_resource/mode_minigame/minigame_101_small_gambling.tres" id="14_5d8uv"]
[ext_resource type="Texture2D" uid="uid://cx854vkq3n8gs" path="res://assets/image/ui/ui_level/SeedChooser_Button2_Glow.png" id="14_xsph7"]
[ext_resource type="PackedScene" uid="uid://bjdufdnu8jj62" path="res://scenes/character/plant/plant_004_wall_nut.tscn" id="19_mbc5i"]
[ext_resource type="Resource" uid="uid://c8yt6n65ponc6" path="res://resources/level_date_resource/mode_minigame/minigame_01_bowling.tres" id="20_vuip8"]
[ext_resource type="Texture2D" uid="uid://bqtnl31pv3rv3" path="res://assets/reanim/Hammer_3.png" id="21_3ef3p"]
[ext_resource type="Texture2D" uid="uid://qtifu6lsmq6x" path="res://assets/reanim/hammer_1.png" id="22_xguwi"]
[ext_resource type="Texture2D" uid="uid://dweon5ml8otw5" path="res://assets/reanim/Hammer_2.png" id="23_6wvnp"]
[ext_resource type="Texture2D" uid="uid://xc3kqag3vqlq" path="res://assets/image/ui/ui_level/Almanac_CloseButton.png" id="25_ta0hi"]
[ext_resource type="Texture2D" uid="uid://c82uuprowr5d" path="res://assets/image/ui/ui_level/Almanac_CloseButtonHighlight.png" id="26_fvivu"]
[ext_resource type="BitMap" uid="uid://bc7yq02xscrlr" path="res://assets/image/ui/ui_level/Almanac_CloseButton_Mask.png" id="27_2sh17"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehgxy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq2ge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1i0xb"]

[node name="ChooseLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ehgxy")
script = ExtResource("1_o008e")
curr_page = 1

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xopa1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 22.0
offset_right = 77.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/font_size = 36
text = "迷 你 游 戏"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AllPage" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="AllPage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -365.0
offset_top = 99.0
offset_right = 367.0
offset_bottom = 568.0
grow_horizontal = 2
theme_override_constants/h_separation = 53
theme_override_constants/v_separation = 3
columns = 5

[node name="TextureRect1" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect2" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")
curr_level_data_game_para = ExtResource("20_vuip8")

[node name="Panel" type="Panel" parent="AllPage/GridContainer/TextureRect2"]
clip_children = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.3976
offset_top = 4.38553
offset_right = 42.6024
offset_bottom = 70.3855
grow_horizontal = 2
pivot_offset = Vector2(41, 33.5)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ehgxy")

[node name="TextureRect" type="TextureRect" parent="AllPage/GridContainer/TextureRect2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -39.0
offset_right = 145.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_e2jkj")

[node name="Plant004WallNut" parent="AllPage/GridContainer/TextureRect2/Panel/TextureRect" node_paths=PackedStringArray("node_no_change_direction") instance=ExtResource("19_mbc5i")]
position = Vector2(90.6627, 96.0242)
node_no_change_direction = [NodePath("HpComponent"), NodePath("SleepComponent"), null]
character_init_type = 1

[node name="TextureButton" type="TextureButton" parent="AllPage/GridContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_mrsyh")
texture_pressed = ExtResource("7_fgi2n")
texture_focused = ExtResource("6_mrsyh")

[node name="Label" type="Label" parent="AllPage/GridContainer/TextureRect2/TextureButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 82.5
offset_right = 99.0
offset_bottom = 105.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "保龄球"
horizontal_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect4" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect5" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect6" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect7" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect8" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect9" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect10" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect11" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect12" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect13" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect14" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")

[node name="TextureRect15" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")
curr_level_data_game_para = ExtResource("14_5d8uv")

[node name="Panel" type="Panel" parent="AllPage/GridContainer/TextureRect15"]
clip_children = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.9398
offset_top = 0.987915
offset_right = 42.0602
offset_bottom = 68.9879
grow_horizontal = 2
pivot_offset = Vector2(41, 33.5)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cq2ge")

[node name="TextureRect" type="TextureRect" parent="AllPage/GridContainer/TextureRect15/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -51.0
offset_right = 141.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_rivfv")

[node name="Hammer" type="Node2D" parent="AllPage/GridContainer/TextureRect15/Panel"]
z_index = 950
z_as_relative = false
position = Vector2(45.241, 35.5121)
scale = Vector2(0.51, 0.51)

[node name="Body" type="Node2D" parent="AllPage/GridContainer/TextureRect15/Panel/Hammer"]
position = Vector2(-62, -11)

[node name="Hammer_3" type="Sprite2D" parent="AllPage/GridContainer/TextureRect15/Panel/Hammer/Body"]
position = Vector2(57.9, -19.3)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("21_3ef3p")
centered = false

[node name="Hammer_2" type="Sprite2D" parent="AllPage/GridContainer/TextureRect15/Panel/Hammer/Body"]
position = Vector2(74.6, -29.3)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("22_xguwi")
centered = false

[node name="Hammer1" type="Sprite2D" parent="AllPage/GridContainer/TextureRect15/Panel/Hammer/Body"]
position = Vector2(65.3, 4.1)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("23_6wvnp")
centered = false

[node name="TextureButton" type="TextureButton" parent="AllPage/GridContainer/TextureRect15"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_mrsyh")
texture_pressed = ExtResource("7_fgi2n")
texture_focused = ExtResource("6_mrsyh")

[node name="Label" type="Label" parent="AllPage/GridContainer/TextureRect15/TextureButton"]
layout_mode = 0
offset_left = 18.0
offset_top = 82.5
offset_right = 98.0
offset_bottom = 105.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "锤僵尸"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect16" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect17" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect18" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect19" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect20" type="TextureRect" parent="AllPage/GridContainer"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="GridContainer2" type="GridContainer" parent="AllPage"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -365.0
offset_top = 99.0
offset_right = 367.0
offset_bottom = 570.0
grow_horizontal = 2
theme_override_constants/h_separation = 53
theme_override_constants/v_separation = 3
columns = 5

[node name="TextureRect" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")
script = ExtResource("8_pw6t1")
curr_level_data_game_para = ExtResource("14_5d8uv")

[node name="Panel" type="Panel" parent="AllPage/GridContainer2/TextureRect"]
clip_children = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 2.13101
offset_right = 46.0
offset_bottom = 74.131
grow_horizontal = 2
pivot_offset = Vector2(41, 33.5)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1i0xb")

[node name="TextureRect" type="TextureRect" parent="AllPage/GridContainer2/TextureRect/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -39.0
offset_right = 145.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_e2jkj")

[node name="Zombie020Yeti" parent="AllPage/GridContainer2/TextureRect/Panel/TextureRect" instance=ExtResource("7_my4l7")]
position = Vector2(92.5, 94.7817)
scale = Vector2(0.5, 0.5)
character_init_type = 1

[node name="TextureButton" type="TextureButton" parent="AllPage/GridContainer2/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_mrsyh")
texture_pressed = ExtResource("7_fgi2n")
texture_focused = ExtResource("6_mrsyh")

[node name="Label" type="Label" parent="AllPage/GridContainer2/TextureRect/TextureButton"]
layout_mode = 0
offset_left = 25.0
offset_top = 82.0
offset_right = 89.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "小赌怡情"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect3" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect4" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect5" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect6" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect7" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect8" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect9" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect10" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect11" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect12" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect13" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect14" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect15" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect16" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect17" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect18" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect19" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="TextureRect20" type="TextureRect" parent="AllPage/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_we3l7")

[node name="MainMenu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 568.0
offset_right = 759.0
offset_bottom = 594.0
texture_normal = ExtResource("25_ta0hi")
texture_pressed = ExtResource("26_fvivu")
texture_click_mask = ExtResource("27_2sh17")

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -10.0
offset_right = 18.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "主菜单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Last" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -32.0
offset_right = -49.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_v8ms4")
texture_pressed = ExtResource("14_xsph7")
texture_hover = ExtResource("14_xsph7")
texture_click_mask = ExtResource("27_2sh17")

[node name="Label" type="Label" parent="Last"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "上一页"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -31.0
offset_right = 165.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_v8ms4")
texture_pressed = ExtResource("14_xsph7")
texture_hover = ExtResource("14_xsph7")
texture_click_mask = ExtResource("27_2sh17")

[node name="Label" type="Label" parent="Next"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "下一页"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 670.0
offset_top = 568.0
offset_right = 759.0
offset_bottom = 594.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("25_ta0hi")
texture_pressed = ExtResource("26_fvivu")
texture_click_mask = ExtResource("27_2sh17")

[node name="Label" type="Label" parent="MainMenu2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -10.0
offset_right = 18.5
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "主菜单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPage" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 572.0
offset_right = 83.0
offset_bottom = 592.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "当前页数:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainMenu" to="." method="back_start_menu"]
[connection signal="pressed" from="Last" to="." method="_on_last_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="MainMenu2" to="." method="back_start_menu"]
